--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "db:reset": "npm run db:schema && npm run db:seed"
   },
   "imports": {
-    "#*": "./*.js"
+    "#app": "./app.js",
+    "#db/*": "./db/*.js",
+    "#api/*": "./api/*.js"
   },
   "dependencies": {
     "express": "^5.1.0",
